# VLM-Drone

./: .gitignore  .gitmodules  README.md  README_JA.md  pyproject.toml
Genesis/: .gitignore  README.md  README_FR.md  pyproject.toml
Genesis/doc/: .gitignore
Genesis/doc/source/api_reference/scene/: scene.md
Genesis/doc/source/user_guide/advanced_topics/: sparse_computation.md
Genesis/doc/source/user_guide/getting_started/: advanced_ik.md  beyond_rigid_bodies.md  command_line_tools.md  config_system.md  control_your_robot.md  hello_genesis.md  interactive_debugging.md  locomotion.md  parallel_simulation.md  soft_robots.md
Genesis/doc/source/user_guide/overview/: installation.md
Genesis/examples/: view_terrain.py
Genesis/examples/drone/: README.md  fly_route.py  fly_route_pid.py  multi_hover_env.py  pid_eval.py
Genesis/genesis/assets/urdf/plane/: bullet3terrain.urdf
Genesis/genesis/engine/: mesh.py
Genesis/genesis/ext/LuisaRender/: .gitignore
Genesis/genesis/ext/LuisaRender/src/apps/: CMakeLists.txt
Genesis/genesis/ext/ParticleMesher/: CMakeLists.txt  setup.py
Genesis/genesis/ext/ParticleMesher/ParticleMesherPy/: libboost_iostreams.so.1.73.0
Genesis/genesis/ext/ParticleMesher/src/: clock.h  mesh_construct.h
Genesis/genesis/ext/pyrender/: mesh.py
Website/: index.html
checkpoints/rl_model/: cfgs.pkl  model_500.pt
doc/: README.md  requirements.txt
doc/source/: conf.py  index.md
doc/source/user_guide/: index.md
doc/source/user_guide/advanced_topics/: collision_representation.md  concepts.md  differentiable_simulation.md  naming_and_variables.md
doc/source/user_guide/getting_started/: hover_env.md  inverse_kinematics_motion_planning.md  visualization.md
doc/source/user_guide/overview/: mission.md  what_is_genesis.md  why_a_new_simulator.md
examples/drone/: README.md  README_VLM_Integration.md  fixPolicyName.py  fly_route_pid.py  multi_hover_env.py  multi_hover_env_with_vlm.py  multi_hover_eval.py  pid_env.py  pid_env_vlm.py  pid_eval.py  pid_train.py  testLLM.py  test_vlm_integration.py
examples/drone/vlm/: .gitignore  README.md  api.py  multi_hover_env_with_vlm.py  quadcopter_controller.py  run.py  test_integration.py
examples/locomotion/: terrain_env.py  terrain_eval.py  terrain_train.py
genesis/assets/usd/ground/: 111.mtl
genesis/ext/LuisaRender/: .gitmodules  README.md
genesis/ext/LuisaRender/src/: CMakeLists.txt
genesis/ext/LuisaRender/src/apps/: app_base.h  cli.cpp  export.cpp  pipe_render.cpp  py_class.h  py_interface.cpp  py_scene.h
genesis/ext/LuisaRender/src/base/: camera.cpp  camera.h  film.cpp  film.h  filter.cpp  geometry.h  integrator.cpp  (+20 more)
genesis/ext/ParticleMesher/: Dockerfile  README.md
genesis/ext/ParticleMesher/src/: CMakeLists.txt  foam_generator.cpp  foam_generator.h  format.h  mesh_construct.cpp  point_grid.h  py_particle_mesher.cpp  surface_splitter.cpp  surface_splitter.h
genesis/utils/: mesh.py  usda.py
pictures/: .gitignore
vlm/: .env  .gitignore  run.py  setup_assets.py
(+201 files in other folders)
