cmake_minimum_required(VERSION 3.18)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(ParticleMesher)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

if(NOT DEFINED OPENVDB_MODULE_PATH)
    message(FATAL_ERROR "OPENVDB_MODULE_PATH not set.")
endif()
list(APPEND CMAKE_MODULE_PATH ${OPENVDB_MODULE_PATH})
find_package(OpenVDB REQUIRED)
add_definitions(-DUSE_OPENVDB)

find_package(pybind11 REQUIRED)

add_subdirectory(src)
